--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(get_form_id)
 export(get_form_questions)
 export(gformr)
 export(make_url)
+export(why_R_u_thankful)
 importFrom(magrittr,"%>%")
