--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: googleformr
 Title: Collect Data Programmatically by POST Methods to Google Forms
-Version: 0.0.2
+Version: 0.0.3
 Authors@R: c(person("Steve", "Simpson", email = "steven.troy.simpson@gmail.com", role = c("aut", "cre")))
 Maintainer: Steve Simpson <steven.troy.simpson@gmail.com>
-Description: GET and POST data to Google Forms; more secure than having to
-    expose Google Sheets in order to POST data.
+Description: GET and POST data to Google Forms; an API to Google Forms,
+    allowing users to POST data securely to Google Forms without needing authentication or permissioning.
 Depends:
     R (>= 3.2.2)
 Imports:
@@ -20,12 +20,11 @@ Roxygen: list(wrap = FALSE)
 RoxygenNote: 5.0.1
 Collate:
     'check_form_works.R'
-    'comments_gformr.R'
+    'get_form_id.R'
     'make_url.R'
     'get_form.R'
     'get_form_entry_ids.R'
-    'get_form_id.R'
-    'get_form_questions.R'
     'gformr.R'
+    'comments_gformr.R'
+    'get_form_questions.R'
     'googleformr-package.R'
-    'why_R_u_opensource.R'
