--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: googleformr
 Title: Collect Data Programmatically by POST Methods to Google Forms
-Version: 0.1.0
+Version: 0.1.1
 Authors@R: c(person("Steve", "Simpson", email = "steven.troy.simpson@gmail.com", role = c("aut", "cre")))
 Maintainer: Steve Simpson <steven.troy.simpson@gmail.com>
-Description: GET and POST data to Google Forms; an API to Google Forms,
-    allowing users to POST data securely to Google Forms without needing authentication or permissioning.
+Description: GET and POST data to Google Forms; an API to Google Forms, allowing
+    users to POST data securely to Google Forms without needing authentication or
+    permissioning.
 Depends:
     R (>= 3.2.2)
 Imports:
@@ -27,4 +28,3 @@ Collate:
     'gformr.R'
     'comments_gformr.R'
     'get_form_questions.R'
-    'googleformr-package.R'
