--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,8 @@ License: GPL-2
 LazyData: TRUE
 Roxygen: list(wrap = FALSE)
 RoxygenNote: 5.0.1
+URL: https://github.com/data-steve/googleformr
+BugReports: https://github.com/data-steve/googleformr/issues
 Collate:
     'check_form_works.R'
     'get_form_id.R'
