--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,7 @@ export(get_form)
 export(get_form_entry_ids)
 export(get_form_id)
 export(get_form_questions)
+export(get_form_str)
 export(gformr)
 export(make_url)
+export(post_answers)
